dynamic-rupture/SH_max_test/logs/jobid_3939447/3939447.SH_max_test.out
Thu 26 Sep 2024 11:53:58 PM UTC
num_nodes: 16 ntasks: 16 cpus_per_task:
Line 63 replaced with: OutputFile='/hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/SH_max_test/jobid_3939447'
Job log complete.
Starting SeisSol...
Fri Sep 27 01:54:00, Info:  Using the parameter file parameters.par 
Fri Sep 27 01:54:00, Info:  Reading SeisSol parameter file... 
Fri Sep 27 01:54:00, Info:  In your parameter file, you have specified a non-positive interval for "checkpointinterval" . This mechanism is deprecated and may be removed in a future version of SeisSol. Consider disabling the whole module by setting "checkpoint" to 0 instead by adding "checkpoint = 0" to the "output" section of your parameter file instead. 
Fri Sep 27 01:54:00, Info:  The field "printintervalcriterion" is no longer in use. You may safely remove it from your parameters file. 
Fri Sep 27 01:54:00, Info:  The field "printintervalcriterion" is no longer in use. You may safely remove it from your parameters file. 
Fri Sep 27 01:54:00, Info:  The field "pickdttype" is no longer in use. You may safely remove it from your parameters file. 
Fri Sep 27 01:54:00, Info:  The field "faultoutputflag" is no longer in use. You may safely remove it from your parameters file. 
Fri Sep 27 01:54:00, Info:  The field "boundaries" is no longer in use. You may safely remove it from your parameters file. 
Fri Sep 27 01:54:00, Info:  SeisSol parameter file read successfully. 
Fri Sep 27 01:54:00, Info:  Model information: 
Fri Sep 27 01:54:00, Info:  Elastic model: yes 
Fri Sep 27 01:54:00, Info:  Viscoelastic model: no 
Fri Sep 27 01:54:00, Info:  Anelastic model: no 
Fri Sep 27 01:54:00, Info:  Poroelastic model: no 
Fri Sep 27 01:54:00, Info:  Anisotropic model: no 
Fri Sep 27 01:54:00, Info:  Plasticity: no 
Fri Sep 27 01:54:00, Info:  Welcome to SeisSol 
Fri Sep 27 01:54:00, Info:  Copyright (c) 2012 - 2024  SeisSol Group 
Fri Sep 27 01:54:00, Info:  Version: v1.1.4-148-g60aedc8c (dirty) 
Fri Sep 27 01:54:00, Info:  Built on: Jun 17 2024 21:03:35 
Fri Sep 27 01:54:00, Info:  Last commit: 60aedc8c2ae0a5d9e5a46cc3a40e4eaf1c047225 at 2024-06-06T12:54:08+00:00 
Fri Sep 27 01:54:00, Info:  Compiled with HOST_ARCH = skx 
Fri Sep 27 01:54:00, Info:  Running on (rank=0): "i01r01c03s01" 
Fri Sep 27 01:54:00, Info:  Using MPI with #ranks: 16 
Fri Sep 27 01:54:00, Info:  Node-wide (shared memory) MPI with #ranks/node: 1 
Fri Sep 27 01:54:00, Info:  Using asynchronous MPI routines. 
Fri Sep 27 01:54:00, Info:  Using OMP with #threads/rank: 94 
Fri Sep 27 01:54:00, Info:  OpenMP worker affinity (this process): "0123456789|0123456789|0123456789|0123456789|0123456-89|0123456789|0123456789|0123456789|0123456789|01234-" 
Fri Sep 27 01:54:00, Info:  OpenMP worker affinity (this node)   : "0123456789|0123456789|0123456789|0123456789|0123456-89|0123456789|0123456789|0123456789|0123456789|01234-" 
Fri Sep 27 01:54:00, Info:  Using a communication thread for advancing MPI communication. 
Fri Sep 27 01:54:00, Info:  Communication thread affinity        : "----------|----------|----------|----------|-------7--|----------|----------|----------|----------|-----5" 
Fri Sep 27 01:54:00, Info:  The stack size ulimit is 2097152 [kiB] ( = 2.0000 GiB ). 
Fri Sep 27 01:54:00, Info:  Begin init mesh. 
Fri Sep 27 01:54:00, Info:  Mesh file: "/dss/dsshome1/01/di35poq/mesh/mesh_v07/Haiti_v07_lowres" 
Fri Sep 27 01:54:00, Info:  Running mini SeisSol to determine node weights. 
Fri Sep 27 01:54:00, Info:  miniSeisSol configured with 50000 elements and 10 repeats per process 
Fri Sep 27 01:54:00, Info:  Node weights: mean = 41.2981  std = 0.545184  min = 39.6607  median = 41.4113  max = 41.8963 
Fri Sep 27 01:54:00, Info:  Reading PUML mesh 
Fri Sep 27 01:54:00, Info:  Inferring boundary format. 
Fri Sep 27 01:54:00, Info:  Boundary format not given in PUML file; inferring from array shape. 
Fri Sep 27 01:54:00, Info:  Using boundary format: i32 (4xi8) 
Fri Sep 27 01:54:00, Info:  Found 2685422 cells 
Fri Sep 27 01:54:00, Info:  Found 477078 vertices 
Fri Sep 27 01:54:02, Info:  Computing LTS weights. 
Fri Sep 27 01:54:04, Info:  Limiting number of clusters to 2147483646 
Fri Sep 27 01:54:04, Info:  Computing LTS weights. Done.  (108216 reductions.)
Fri Sep 27 01:54:04, Info:  Using the Parmetis partition library and strategy. 
Fri Sep 27 01:54:08, Info:  PUML mesh read in: 7.7127 s (min: 7.5744 s, max: 7.8734 s)
Fri Sep 27 01:54:08, Info:  The mesh has been read. Starting post processing. 
Fri Sep 27 01:54:08, Info:  Extracting fault information. 
Fri Sep 27 01:54:08, Info:  Exchanging ghostlayer metadata. 
Fri Sep 27 01:54:10, Info:  Mesh initialized in: 9.8207 s (min: 9.8206 s, max: 9.8212 s)
Fri Sep 27 01:54:10, Info:  End init mesh. 
Fri Sep 27 01:54:10, Info:  Begin init model. 
Fri Sep 27 01:54:10, Info:  Initialize LTS. 
Fri Sep 27 01:54:10, Info:  Deriving clusters ids for min. time step width / multiRate: 0.000213316 / 2 
Fri Sep 27 01:54:10, Info:  Due to wiggle factor of 1 the minimum timestep size is reduced to 0.000213316 
Fri Sep 27 01:54:10, Info:  Number of elements in time clusters: 
Fri Sep 27 01:54:10, Info:  0: 2088 
Fri Sep 27 01:54:10, Info:  1: 265401 
Fri Sep 27 01:54:10, Info:  2: 1618976 
Fri Sep 27 01:54:10, Info:  3: 538212 
Fri Sep 27 01:54:10, Info:  4: 147352 
Fri Sep 27 01:54:10, Info:  5: 35652 
Fri Sep 27 01:54:10, Info:  6: 11329 
Fri Sep 27 01:54:10, Info:  7: 18592 
Fri Sep 27 01:54:10, Info:  8: 47781 
Fri Sep 27 01:54:10, Info:  9: 39 
Fri Sep 27 01:54:10, Info:  maximum theoretical speedup (compared to GTS): 6.4313 per cell LTS, 4.34786 with the used clustering. 
Fri Sep 27 01:54:10, Info:  Number of elements in dynamic rupture time clusters: 
Fri Sep 27 01:54:10, Info:  0 (dr): 618 
Fri Sep 27 01:54:10, Info:  1 (dr): 78828 
Fri Sep 27 01:54:10, Info:  2 (dr): 309996 
Fri Sep 27 01:54:10, Info:  3 (dr): 2509 
Fri Sep 27 01:54:10, Info:  4 (dr): 0 
Fri Sep 27 01:54:10, Info:  5 (dr): 0 
Fri Sep 27 01:54:10, Info:  6 (dr): 0 
Fri Sep 27 01:54:10, Info:  7 (dr): 0 
Fri Sep 27 01:54:10, Info:  8 (dr): 0 
Fri Sep 27 01:54:10, Info:  9 (dr): 0 
Fri Sep 27 01:54:10, Info:  Initialize Friction Model 
Fri Sep 27 01:54:10, Info:  Initialize cell material parameters. 
Fri Sep 27 01:54:12, Info:  Initialize Memory layout. 
Fri Sep 27 01:54:12, Info:  Initialize cell-local matrices. 
Fri Sep 27 01:54:12, Info:  Initializing Fault, using a quadrature rule with  25  points. 
Fri Sep 27 01:56:38, Info:  Model initialized in: 2 min 28.1841 s (min: 2 min 28.1816 s, max: 2 min 28.1872 s)
Fri Sep 27 01:56:38, Info:  End init model. 
Fri Sep 27 01:56:38, Info:  Setting initial conditions. 
Fri Sep 27 01:56:38, Info:  Using initial condition "Zero" . 
Fri Sep 27 01:56:38, Info:  Reading source. 
Fri Sep 27 01:56:38, Info:  No source term specified. 
Fri Sep 27 01:56:38, Info:  Setting up boundary conditions. 
Fri Sep 27 01:56:38, Info:  Begin init output. 
Fri Sep 27 01:56:38, Info:  Enabling 2D fault output 
Fri Sep 27 01:56:38, Info:  Initializing Fault output. Number of sub-triangles: 4 
Fri Sep 27 01:56:38, Info:  Initializing XDMF fault output. 
Fri Sep 27 01:56:38, Info:  Fault writer thread affinity: "----------|----------|----------|----------|-------7--|----------|----------|----------|----------|-----5" 
Fri Sep 27 01:56:38, Info:  Initializing XDMF fault output. Done. 
Fri Sep 27 01:56:38, Info:  Wave field writer thread affinity: "----------|----------|----------|----------|-------7--|----------|----------|----------|----------|-----5" 
Fri Sep 27 01:56:38, Info:  Initializing XDMF wave field output. 
Fri Sep 27 01:56:38, Info:  Refinement is turned off. 
Fri Sep 27 01:56:38, Info:  Refinement class initialized 
Fri Sep 27 01:56:38, Info:  VariableSubsampler initialized 
Fri Sep 27 01:56:38, Info:  High order output initialized 
Fri Sep 27 01:56:38, Info:  Initializing XDMF wave field output. Done. 
Fri Sep 27 01:56:38, Info:  No record points read. 
Fri Sep 27 01:56:38, Info:  Finding meshIds for receivers... 
Fri Sep 27 01:56:38, Info:  Cleaning possible double occurring receivers for MPI... 
Fri Sep 27 01:56:38, Info:  Mapping receivers to LTS cells... 
Fri Sep 27 01:56:38, Info:  Initializing energy output. 
Fri Sep 27 01:56:38, Info:  End init output. 
Fri Sep 27 01:56:39, Info:  Finishing initialization... 
Fri Sep 27 01:56:39, Info:  Starting simulation. 
Fri Sep 27 01:56:39, Info:  Writing faultoutput at time 0.
Fri Sep 27 01:56:39, Info:  Writing faultoutput at time 0. Done.
Fri Sep 27 01:56:39, Info:  Waiting for last wave field. 
Fri Sep 27 01:56:39, Info:  Writing wave field at time 0.
Fri Sep 27 01:56:39, Info:  Writing wave field at time 0. Done.
Fri Sep 27 01:56:39, Info:  Writing energy output at time 0 
Fri Sep 27 01:56:39, Info:  Total momentum (X, Y, Z): 0  , 0  , 0 
Fri Sep 27 01:56:39, Info:  Writing energy output at time 0 Done. 
Fri Sep 27 01:56:39, Info:  Time spent for initial IO: 56.6205 ms (min: 48.1040 ms, max: 68.3147 ms)
Fri Sep 27 01:57:05, Info:  Writing faultoutput at time 0.5.
Fri Sep 27 01:57:05, Info:  Writing faultoutput at time 0.5. Done.
Fri Sep 27 01:57:05, Info:  Writing energy output at time 0.5 
Fri Sep 27 01:57:05, Info:  Elastic energy (total, % kinematic, % potential):  1.34089e+12  , 24.8953  , 75.1047 
Fri Sep 27 01:57:05, Info:  Total momentum (X, Y, Z): 0.0032458  , 0.0106517  , 0.0038632 
Fri Sep 27 01:57:05, Info:  Frictional work (total, % static, % radiated):  1.35674e+12  , 72.8795  , 27.1205 
Fri Sep 27 01:57:05, Info:  Seismic moment (without plasticity): 1.65144e+16  Mw: 4.74191 
Fri Sep 27 01:57:05, Info:  Writing energy output at time 0.5 Done. 
Fri Sep 27 01:57:05, Info:  Time spent this phase (total): 26.7744 s (min: 26.7525 s, max: 26.7885 s)
Fri Sep 27 01:57:05, Info:  Time spent this phase (compute): 26.7177 s (min: 26.6950 s, max: 26.7374 s)
Fri Sep 27 01:57:05, Info:  Time spent this phase (IO): 51.3801 ms (min: 40.5527 ms, max: 76.1288 ms)
Fri Sep 27 01:57:05, Info:  Performance since the start: 9.4005 TFLOP/s (rank 0: 595.5757 GFLOP/s , average over ranks: 587.5313 GFLOP/s ) 
Fri Sep 27 01:57:05, Info:  Performance since last sync point: 9.4005 TFLOP/s (rank 0: 595.5757 GFLOP/s , average over ranks: 587.5313 GFLOP/s ) 
Fri Sep 27 01:57:32, Info:  Writing faultoutput at time 1.
Fri Sep 27 01:57:32, Info:  Writing faultoutput at time 1. Done.
Fri Sep 27 01:57:32, Info:  Writing energy output at time 1 
Fri Sep 27 01:57:32, Info:  Elastic energy (total, % kinematic, % potential):  1.02002e+13  , 23.9796  , 76.0204 
Fri Sep 27 01:57:32, Info:  Total momentum (X, Y, Z): 0.393697  , 0.398651  , -0.280834 
Fri Sep 27 01:57:32, Info:  Frictional work (total, % static, % radiated):  1.05549e+13  , 72.3299  , 27.6701 
Fri Sep 27 01:57:32, Info:  Seismic moment (without plasticity): 1.22896e+17  Mw: 5.32303 
Fri Sep 27 01:57:32, Info:  Writing energy output at time 1 Done. 
Fri Sep 27 01:57:32, Info:  Time spent this phase (total): 26.5513 s (min: 26.5284 s, max: 26.5699 s)
Fri Sep 27 01:57:32, Info:  Time spent this phase (compute): 26.5511 s (min: 26.5283 s, max: 26.5698 s)
Fri Sep 27 01:57:32, Info:  Time spent this phase (IO): 50.5972 ms (min: 40.5813 ms, max: 70.9456 ms)
Fri Sep 27 01:57:32, Info:  Performance since the start: 9.4398 TFLOP/s (rank 0: 598.2065 GFLOP/s , average over ranks: 589.9900 GFLOP/s ) 
Fri Sep 27 01:57:32, Info:  Performance since last sync point: 9.4795 TFLOP/s (rank 0: 600.8606 GFLOP/s , average over ranks: 592.4695 GFLOP/s ) 
Fri Sep 27 01:57:58, Info:  Writing faultoutput at time 1.5.
Fri Sep 27 01:57:58, Info:  Writing faultoutput at time 1.5. Done.
Fri Sep 27 01:57:58, Info:  Writing energy output at time 1.5 
Fri Sep 27 01:57:58, Info:  Elastic energy (total, % kinematic, % potential):  3.11316e+13  , 22.8008  , 77.1992 
Fri Sep 27 01:57:58, Info:  Total momentum (X, Y, Z): -0.443352  , -0.294496  , 0.259534 
Fri Sep 27 01:57:58, Info:  Frictional work (total, % static, % radiated):  3.22354e+13  , 73.41  , 26.59 
Fri Sep 27 01:57:58, Info:  Seismic moment (without plasticity): 3.85164e+17  Mw: 5.65376 
Fri Sep 27 01:57:58, Info:  Writing energy output at time 1.5 Done. 
Fri Sep 27 01:57:58, Info:  Time spent this phase (total): 26.5809 s (min: 26.5597 s, max: 26.6005 s)
Fri Sep 27 01:57:58, Info:  Time spent this phase (compute): 26.5808 s (min: 26.5597 s, max: 26.6004 s)
Fri Sep 27 01:57:58, Info:  Time spent this phase (IO): 52.8145 ms (min: 40.5568 ms, max: 89.0071 ms)
Fri Sep 27 01:57:58, Info:  Performance since the start: 9.4495 TFLOP/s (rank 0: 598.9131 GFLOP/s , average over ranks: 590.5948 GFLOP/s ) 
Fri Sep 27 01:57:58, Info:  Performance since last sync point: 9.4689 TFLOP/s (rank 0: 600.3312 GFLOP/s , average over ranks: 591.8083 GFLOP/s ) 
Fri Sep 27 01:58:25, Info:  Writing faultoutput at time 2.
Fri Sep 27 01:58:25, Info:  Writing faultoutput at time 2. Done.
Fri Sep 27 01:58:25, Info:  Writing energy output at time 2 
Fri Sep 27 01:58:25, Info:  Elastic energy (total, % kinematic, % potential):  6.47437e+13  , 21.0739  , 78.9261 
Fri Sep 27 01:58:25, Info:  Total momentum (X, Y, Z): -0.875489  , 1.23095  , -0.378344 
Fri Sep 27 01:58:25, Info:  Frictional work (total, % static, % radiated):  6.69555e+13  , 74.7813  , 25.2187 
Fri Sep 27 01:58:25, Info:  Seismic moment (without plasticity): 8.28014e+17  Mw: 5.87536 
Fri Sep 27 01:58:25, Info:  Writing energy output at time 2 Done. 
Fri Sep 27 01:58:25, Info:  Time spent this phase (total): 26.3177 s (min: 26.2960 s, max: 26.3524 s)
Fri Sep 27 01:58:25, Info:  Time spent this phase (compute): 26.3176 s (min: 26.2959 s, max: 26.3523 s)
Fri Sep 27 01:58:25, Info:  Time spent this phase (IO): 50.0389 ms (min: 40.5452 ms, max: 71.5253 ms)
Fri Sep 27 01:58:25, Info:  Performance since the start: 9.4778 TFLOP/s (rank 0: 600.6473 GFLOP/s , average over ranks: 592.3614 GFLOP/s ) 
Fri Sep 27 01:58:25, Info:  Performance since last sync point: 9.5636 TFLOP/s (rank 0: 605.9109 GFLOP/s , average over ranks: 597.7253 GFLOP/s ) 
Fri Sep 27 01:58:51, Info:  Writing faultoutput at time 2.5.
Fri Sep 27 01:58:51, Info:  Writing faultoutput at time 2.5. Done.
Fri Sep 27 01:58:51, Info:  Writing energy output at time 2.5 
Fri Sep 27 01:58:51, Info:  Elastic energy (total, % kinematic, % potential):  1.07945e+14  , 19.1543  , 80.8457 
Fri Sep 27 01:58:51, Info:  Total momentum (X, Y, Z): -8.90837  , -5.90091  , 10.4931 
Fri Sep 27 01:58:51, Info:  Frictional work (total, % static, % radiated):  1.11299e+14  , 76.3591  , 23.6409 
Fri Sep 27 01:58:51, Info:  Seismic moment (without plasticity): 1.43353e+18  Mw: 6.03427 
Fri Sep 27 01:58:51, Info:  Writing energy output at time 2.5 Done. 
Fri Sep 27 01:58:51, Info:  Time spent this phase (total): 26.3470 s (min: 26.3246 s, max: 26.3547 s)
Fri Sep 27 01:58:51, Info:  Time spent this phase (compute): 26.3469 s (min: 26.3246 s, max: 26.3546 s)
Fri Sep 27 01:58:51, Info:  Time spent this phase (IO): 49.7068 ms (min: 40.7095 ms, max: 72.4628 ms)
Fri Sep 27 01:58:51, Info:  Performance since the start: 9.4927 TFLOP/s (rank 0: 601.6679 GFLOP/s , average over ranks: 593.2958 GFLOP/s ) 
Fri Sep 27 01:58:51, Info:  Performance since last sync point: 9.5530 TFLOP/s (rank 0: 605.7849 GFLOP/s , average over ranks: 597.0633 GFLOP/s ) 
Fri Sep 27 01:59:18, Info:  Writing faultoutput at time 3.
Fri Sep 27 01:59:18, Info:  Writing faultoutput at time 3. Done.
Fri Sep 27 01:59:18, Info:  Writing energy output at time 3 
Fri Sep 27 01:59:18, Info:  Elastic energy (total, % kinematic, % potential):  1.59258e+14  , 18.2374  , 81.7626 
Fri Sep 27 01:59:18, Info:  Total momentum (X, Y, Z): -24.4676  , -13.1587  , 28.8064 
Fri Sep 27 01:59:18, Info:  Frictional work (total, % static, % radiated):  1.63878e+14  , 77.4401  , 22.5599 
Fri Sep 27 01:59:18, Info:  Seismic moment (without plasticity): 2.20286e+18  Mw: 6.15866 
Fri Sep 27 01:59:18, Info:  Writing energy output at time 3 Done. 
Fri Sep 27 01:59:18, Info:  Time spent this phase (total): 26.6603 s (min: 26.6360 s, max: 26.6805 s)
Fri Sep 27 01:59:18, Info:  Time spent this phase (compute): 26.6602 s (min: 26.6359 s, max: 26.6805 s)
Fri Sep 27 01:59:18, Info:  Time spent this phase (IO): 52.3109 ms (min: 40.5393 ms, max: 88.9462 ms)
Fri Sep 27 01:59:18, Info:  Performance since the start: 9.4840 TFLOP/s (rank 0: 601.1131 GFLOP/s , average over ranks: 592.7518 GFLOP/s ) 
Fri Sep 27 01:59:18, Info:  Performance since last sync point: 9.4407 TFLOP/s (rank 0: 598.3544 GFLOP/s , average over ranks: 590.0467 GFLOP/s ) 
Fri Sep 27 01:59:44, Info:  Writing faultoutput at time 3.5.
Fri Sep 27 01:59:44, Info:  Writing faultoutput at time 3.5. Done.
Fri Sep 27 01:59:44, Info:  Writing energy output at time 3.5 
Fri Sep 27 01:59:44, Info:  Elastic energy (total, % kinematic, % potential):  2.19412e+14  , 17.9522  , 82.0478 
Fri Sep 27 01:59:44, Info:  Total momentum (X, Y, Z): -44.7627  , -24.1645  , 53.9105 
Fri Sep 27 01:59:44, Info:  Frictional work (total, % static, % radiated):  2.25706e+14  , 77.6396  , 22.3604 
Fri Sep 27 01:59:44, Info:  Seismic moment (without plasticity): 3.14828e+18  Mw: 6.26205 
Fri Sep 27 01:59:44, Info:  Writing energy output at time 3.5 Done. 
Fri Sep 27 01:59:44, Info:  Time spent this phase (total): 26.5390 s (min: 26.5336 s, max: 26.5562 s)
Fri Sep 27 01:59:44, Info:  Time spent this phase (compute): 26.5389 s (min: 26.5335 s, max: 26.5562 s)
Fri Sep 27 01:59:44, Info:  Time spent this phase (IO): 53.0368 ms (min: 40.5043 ms, max: 90.4579 ms)
Fri Sep 27 01:59:44, Info:  Performance since the start: 9.4840 TFLOP/s (rank 0: 601.1375 GFLOP/s , average over ranks: 592.7503 GFLOP/s ) 
Fri Sep 27 01:59:44, Info:  Performance since last sync point: 9.4839 TFLOP/s (rank 0: 601.2845 GFLOP/s , average over ranks: 592.7414 GFLOP/s ) 
Fri Sep 27 02:00:11, Info:  Writing faultoutput at time 4.
Fri Sep 27 02:00:11, Info:  Writing faultoutput at time 4. Done.
Fri Sep 27 02:00:11, Info:  Writing energy output at time 4 
Fri Sep 27 02:00:11, Info:  Elastic energy (total, % kinematic, % potential):  2.87736e+14  , 17.9884  , 82.0116 
Fri Sep 27 02:00:11, Info:  Total momentum (X, Y, Z): -76.0879  , -37.8083  , 91.927 
Fri Sep 27 02:00:11, Info:  Frictional work (total, % static, % radiated):  2.96168e+14  , 77.2908  , 22.7092 
Fri Sep 27 02:00:11, Info:  Seismic moment (without plasticity): 4.2696e+18  Mw: 6.35026 
Fri Sep 27 02:00:11, Info:  Writing energy output at time 4 Done. 
Fri Sep 27 02:00:11, Info:  Time spent this phase (total): 26.5527 s (min: 26.5462 s, max: 26.5710 s)
Fri Sep 27 02:00:11, Info:  Time spent this phase (compute): 26.5526 s (min: 26.5461 s, max: 26.5709 s)
Fri Sep 27 02:00:11, Info:  Time spent this phase (IO): 49.6692 ms (min: 40.5783 ms, max: 66.8513 ms)
Fri Sep 27 02:00:11, Info:  Performance since the start: 9.4834 TFLOP/s (rank 0: 601.1112 GFLOP/s , average over ranks: 592.7109 GFLOP/s ) 
Fri Sep 27 02:00:11, Info:  Performance since last sync point: 9.4790 TFLOP/s (rank 0: 600.9268 GFLOP/s , average over ranks: 592.4350 GFLOP/s ) 
Fri Sep 27 02:00:37, Info:  Writing faultoutput at time 4.5.
Fri Sep 27 02:00:37, Info:  Writing faultoutput at time 4.5. Done.
Fri Sep 27 02:00:37, Info:  Writing energy output at time 4.5 
Fri Sep 27 02:00:37, Info:  Elastic energy (total, % kinematic, % potential):  3.64726e+14  , 18.0483  , 81.9517 
Fri Sep 27 02:00:37, Info:  Total momentum (X, Y, Z): -61.7119  , 2.15092  , 110.134 
Fri Sep 27 02:00:37, Info:  Frictional work (total, % static, % radiated):  3.75932e+14  , 76.6854  , 23.3146 
Fri Sep 27 02:00:37, Info:  Seismic moment (without plasticity): 5.57339e+18  Mw: 6.42741 
Fri Sep 27 02:00:37, Info:  Writing energy output at time 4.5 Done. 
Fri Sep 27 02:00:37, Info:  Time spent this phase (total): 26.4034 s (min: 26.3894 s, max: 26.4122 s)
Fri Sep 27 02:00:37, Info:  Time spent this phase (compute): 26.4033 s (min: 26.3894 s, max: 26.4122 s)
Fri Sep 27 02:00:37, Info:  Time spent this phase (IO): 52.4036 ms (min: 40.5670 ms, max: 85.5129 ms)
Fri Sep 27 02:00:37, Info:  Performance since the start: 9.4888 TFLOP/s (rank 0: 601.4477 GFLOP/s , average over ranks: 593.0511 GFLOP/s ) 
Fri Sep 27 02:00:37, Info:  Performance since last sync point: 9.5326 TFLOP/s (rank 0: 604.1533 GFLOP/s , average over ranks: 595.7873 GFLOP/s ) 
Fri Sep 27 02:01:04, Info:  Writing faultoutput at time 5.
Fri Sep 27 02:01:04, Info:  Writing faultoutput at time 5. Done.
Fri Sep 27 02:01:04, Info:  Wrote receivers in 8.07e-07 seconds. 
Fri Sep 27 02:01:04, Info:  Writing energy output at time 5 
Fri Sep 27 02:01:04, Info:  Elastic energy (total, % kinematic, % potential):  4.49709e+14  , 18.1978  , 81.8022 
Fri Sep 27 02:01:04, Info:  Total momentum (X, Y, Z): -52.4824  , 103.963  , -119.735 
Fri Sep 27 02:01:04, Info:  Frictional work (total, % static, % radiated):  4.63951e+14  , 76.182  , 23.818 
Fri Sep 27 02:01:04, Info:  Seismic moment (without plasticity): 7.08956e+18  Mw: 6.49708 
Fri Sep 27 02:01:04, Info:  Writing energy output at time 5 Done. 
Fri Sep 27 02:01:04, Info:  Time spent this phase (total): 26.6163 s (min: 26.6137 s, max: 26.6221 s)
Fri Sep 27 02:01:04, Info:  Time spent this phase (compute): 26.6162 s (min: 26.6136 s, max: 26.6220 s)
Fri Sep 27 02:01:04, Info:  Time spent this phase (IO): 51.8204 ms (min: 40.5254 ms, max: 80.1605 ms)
Fri Sep 27 02:01:04, Info:  Performance since the start: 9.4856 TFLOP/s (rank 0: 601.2454 GFLOP/s , average over ranks: 592.8475 GFLOP/s ) 
Fri Sep 27 02:01:04, Info:  Performance since last sync point: 9.4563 TFLOP/s (rank 0: 599.4305 GFLOP/s , average over ranks: 591.0210 GFLOP/s ) 
Fri Sep 27 02:01:04, Info:  Ignoring duplicate synchronisation point at time 5 ; the last sync point was at  5 
Fri Sep 27 02:01:04, Info:  Waiting for last wave field. 
Fri Sep 27 02:01:04, Info:  Writing wave field at time 5.
Fri Sep 27 02:01:04, Info:  Writing wave field at time 5. Done.
Fri Sep 27 02:01:04, Info:  Ignoring duplicate synchronisation point at time 5 ; the last sync point was at  5 
Fri Sep 27 02:01:04, Info:  Ignoring duplicate synchronisation point at time 5 ; the last sync point was at  5 
Fri Sep 27 02:01:04, Info:  Simulation time (total): 4 min 25.3496 s (min: 4 min 25.3276 s, max: 4 min 25.3660 s)
Fri Sep 27 02:01:04, Info:  Simulation time (compute): 4 min 24.7718 s (min: 4 min 24.5107 s, max: 4 min 24.8814 s)
Fri Sep 27 02:01:04, Info:  Simulation time (IO): 569.6280 ms (min: 453.1831 ms, max: 843.4725 ms)
Fri Sep 27 02:01:04, Info:  Time spent in compute kernels: mean = 252.68  std = 6.77811  min = 233.594  median = 254.026  max = 260.789 
Fri Sep 27 02:01:04, Info:  Load imbalance: 3.10934 % 
Fri Sep 27 02:01:04, Info:  Regression analysis of compute kernels: 
Fri Sep 27 02:01:04, Info:  "computeLocalIntegration" (total time): 1228.8 s ( = 20 min 28.7975 s ) 
Fri Sep 27 02:01:04, Info:  "computeLocalIntegration" ( constant ): 1.89571e-05 (sample size: 1.37999e+06 , standard error: 9.75292e-12 ) 
Fri Sep 27 02:01:04, Info:  "computeLocalIntegration" ( per element ): 8.30132e-08 (sample size: 1.37999e+06 , standard error: 9.75292e-12 ) 
Fri Sep 27 02:01:04, Info:  "computeNeighboringIntegration" (total time): 1488.62 s ( = 24 min 48.6194 s ) 
Fri Sep 27 02:01:04, Info:  "computeNeighboringIntegration" ( constant ): 0.000123475 (sample size: 1.37999e+06 , standard error: 1.31161e-11 ) 
Fri Sep 27 02:01:04, Info:  "computeNeighboringIntegration" ( per element ): 9.09917e-08 (sample size: 1.37999e+06 , standard error: 1.31161e-11 ) 
Fri Sep 27 02:01:04, Info:  "computeDynamicRupture" (total time): 1325.47 s ( = 22 min 5.4675 s ) 
Fri Sep 27 02:01:04, Info:  "computeDynamicRupture" ( constant ): 7.76653e-05 (sample size: 1.00792e+06 , standard error: 7.71707e-11 ) 
Fri Sep 27 02:01:04, Info:  "computeDynamicRupture" ( per element ): 4.51507e-07 (sample size: 1.00792e+06 , standard error: 7.71707e-11 ) 
Fri Sep 27 02:01:04, Info:  "computePointSources" (total time): 0 s ( = 0.0000 s ) 
Fri Sep 27 02:01:04, Info:  "computePointSources" ( constant ): -nan (sample size: 0 , standard error: -nan ) 
Fri Sep 27 02:01:04, Info:  "computePointSources" ( per element ): -nan (sample size: 0 , standard error: -nan ) 
Fri Sep 27 02:01:04, Info:  Total time spent in compute kernels: 4042.88 s ( = 1 h 7 min 22.8845 s ) 
Fri Sep 27 02:01:04, Info:  Total calculated HW-FLOP:  2.5169 PFLOP 
Fri Sep 27 02:01:04, Info:  Total calculated NZ-FLOP:  1.0062 PFLOP 
Fri Sep 27 02:01:04, Info:  Total calculated HW-FLOP/s:  9.4847 TFLOP/s 
Fri Sep 27 02:01:04, Info:  Total calculated NZ-FLOP/s:  3.7916 TFLOP/s 
Fri Sep 27 02:01:04, Info:  WP calculated HW-FLOP:  2.0854 PFLOP 
Fri Sep 27 02:01:04, Info:  WP calculated NZ-FLOP:  685.2895 TFLOP 
Fri Sep 27 02:01:04, Info:  DR calculated HW-FLOP:  431.5317 TFLOP 
Fri Sep 27 02:01:04, Info:  DR calculated NZ-FLOP:  320.8629 TFLOP 
Fri Sep 27 02:01:04, Info:  PL calculated HW-FLOP:  0.0000 FLOP 
Fri Sep 27 02:01:04, Info:  PL calculated NZ-FLOP:  0.0000 FLOP 
Fri Sep 27 02:01:04, Info:  Time spent in simulation: 4 min 25.3666 s (min: 4 min 25.3665 s, max: 4 min 25.3674 s)
Fri Sep 27 02:01:04, Info:  Simulation done. 
Fri Sep 27 02:01:04, Info:  Closing IO. 
Fri Sep 27 02:01:05, Info:  Time wave field writer backend: 842.5382 ms (min: 553.9497 ms, max: 1.8349 s)
Fri Sep 27 02:01:05, Info:  Time wave field writer frontend: 13.1482 ms (min: 11.3589 ms, max: 17.6694 ms)
Fri Sep 27 02:01:05, Info:  Time fault writer backend: 1.2264 s (min: 624.2464 ms, max: 7.9657 s)
Fri Sep 27 02:01:05, Info:  Time fault writer frontend: 12.3095 ms (min: 10.5103 ms, max: 13.7649 ms)
Fri Sep 27 02:01:05, Info:  SeisSol done. Goodbye. 
SeisSol complete.
/hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/SH_max_test/jobid_3939447 ~/haiti-rupture-inputs/dynamic-rupture/SH_max_test
Working on JobID: 3939447
No matching file found for jobid 3939447. Assigning output-fault.xdmf instead
/hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/SH_max_test/jobid_3939447/output-fault.xdmf
warning: Mw computed over 0-85s (avoiding contribution of small residual moment after rupture)
jobid_3939447 moment magnitude: 6.4970795215746335 (M0 = 7.0896e+18)
Finished writing /hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/SH_max_test/jobid_3939447/moment_rate_mainshock.png
Looking for output-fault.xdmf
mu_s: 0.52
mu_d: 0.16
done writing /hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/SH_max_test/jobid_3939447/output_jobid_3939447_extracted-fault.xdmf
full path: /hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/SH_max_test/jobid_3939447/output_jobid_3939447_extracted-fault.xdmf
done writing /hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/SH_max_test/jobid_3939447/output_jobid_3939447_extracted-fault.h5
Job ID set as: 3939447
mu_s: 0.52
mu_d: 0.16
~/haiti-rupture-inputs/dynamic-rupture/SH_max_test
